--- a/src/main/resources/templates/addMedicament.html
+++ b/src/main/resources/templates/addMedicament.html
@@ -6,21 +6,34 @@
 			   <meta name="viewport" content="width=device-width, initial-scale=1">
 			   <title>Bootstrap demo</title>
 			   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+			   <style>
+			   			   	body {
+			   			   				               font-family: Arial, sans-serif; /* Police de caractères */
+			   			   				               text-align: center; /* Alignement du texte au centre */
+			   			   				               padding: 20px; /* Espacement intérieur autour du contenu */
+			   			   				               background-color: #f4f4f4; /* Couleur de fond gris clair */
+			   			   				               margin: 0; /* Supprime les marges par défaut du body */
+			   			   				           }
+			   			   </style>
 	</head>
-	<h1>Application Pharmacie-- Ajout des médicaments</h1>
+	<h1>Application Pharmacie -- Ajout des médicaments</h1>
 	<form class="mb-3" th:action="@{/medicament/add}" th:objet="${medicament}" method="POST">
-	
-		Medicament
-		<input type="text" th:field="*{medicament.nom}">
-		</br></br>
+		<div class="input-group mb-3">
+			<span class="input-group-text">Nom du médicament</span>
+	 		<input type="text" class="form-control" th:field="*{medicament.nom}">
+		</div>
+		<div class="input-group mb-3">
+			<span class="input-group-text">Quantite</span>
+			<input type="text" class="form-control" th:field="*{medicament.quantite}">
+		</div>
 		
-		Quantite
-		<input type="text" th:field="*{medicament.quantite}">
-		</br></br>
-		Prix unitaire
-		<input type="text" th:field="*{medicament.prix}">
-		</br></br>
-		<input type="submit" value="create">
+		<div class="input-group mb-3">
+		  <span class="input-group-text">Prix</span>
+		  <span class="input-group-text">DT</span>
+	
+	
+		<input type="text" class="form-control" th:field="*{medicament.prix}" aria-label="Dollar amount (with dot and two decimal places)">
+		</div>
+		<input type="submit" value="Ajouter">
 	</form>
 </html>
