--- a/src/main/resources/templates/listMedicament.html
+++ b/src/main/resources/templates/listMedicament.html
@@ -7,10 +7,18 @@
 			   <meta name="viewport" content="width=device-width, initial-scale=1">
 			   <title>Bootstrap demo</title>
 			   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+			   <style>
+			   	body {
+			   				               font-family: Arial, sans-serif; /* Police de caractères */
+			   				               text-align: center; /* Alignement du texte au centre */
+			   				               padding: 20px; /* Espacement intérieur autour du contenu */
+			   				               background-color: #f4f4f4; /* Couleur de fond gris clair */
+			   				               margin: 0; /* Supprime les marges par défaut du body */
+			   				           }
+			   </style>
 	</head>
 	<body>
-	<h1>Application Pharmacie-- Liste des médicaments</h1>
+	<h1>Application Pharmacie -- Liste des médicaments</h1>
 <table class="table">
 	<thead>
 		<tr>
